<resources>
    <string name="app_name">ListApp</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Login</string>
    <string name="regsitrarse">Registrarse</string>
    <string name="lista">Lista</string>
    <string name="registrate">Registrate</string>
    <string name="desconectar">Desconectar</string>
    <string name="prueba"> Prueba </string>
</resources>
